# chrisyoung

./: .gitignore  LICENSE  README.md  VERSIONS  build  chrisyoung.cabal  deploy  redirects.txt  s3-redirects.xml  setup.sh  stack.yaml
site/: .htaccess  404.html  Main.hs  about.rst  code.rst  deploy.sh  dev.sh  etc.rst  index.html  meta.rst  preview.sh  prose.rst  site.hs  update_all.sh
site/biblio/: chicago-manual-of-style-16th-edition-full-note.csl  chicago-manual-of-style-16th-edition-modified-full-note.csl  files.bib  oxford-studies-in-ancient-philosophy-modified.csl  the-journal-of-hellenic-studies.csl
site/classes/: AER2syllabus.htm  aer-syllabus.html  aer2calendar.htm  aer2essaytopics.htm  aer2peerevaluation.htm  aristotleandgoodlife-s2005-calendar1.html  aristotleandthegoodlife-s2005-syllabus.html  biomedical2004-coursecalendar.html  biomedical2004-readingsataglance.html  biomedical2004-shortassignment.html  biomedical2004-syllabus.html  biomedtakehomeexam.doc  biomedtakehomeexam.html  biomedtakehomeexam.txt  gradingkey.htm  jwt-assignments.html  jwt-calendar.html  jwt-resources.html  jwt-syllabus.html  newreadingsataglance.html  plagiarism.html  proposaltodraft.htm  xsbinordertoy.html
site/css/: cmun-serif.css  main.css  markdown.css  reset.css  style.css
site/etc/: teaching.rst
site/js/: touch-ups.js
site/media/explananda/: helpwithheaderplease.txt
site/prose/blog/: index.html
site/prose/blog/posts/: 2003-11-18_i_am_job.markdown  2004-02-01_aristophanes.markdown  2004-02-02_berman.markdown  2004-04-12_easter_memories.markdown  2004-04-29_kataperdomai.markdown  (+221 more)
site/prose/essays/: how-to-teach-introduction-to-applied-ethics.markdown  miser.markdown
site/reading/: computational-stemmatology.markdown
site/templates/: default.html  post-item.html  post.html  tag-cloud.html  tag-item.html  tag.html
