name:                chrisyoung
version:             0.1.0.0
synopsis:            Personal Blog
description:         Personal Website of Christopher Young
homepage:            http://chrisyoung.net
license:             MIT
license-file:        LICENSE
author:              Christopher Young
maintainer:          chris@chrisyoung.net
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.8

executable chrisyoung
  Hs-source-dirs: site
  Main-is:        Main.hs
  Ghc-options:    -Wall
  -- other-modules:       
  other-extensions:    OverloadedStrings
  -- hs-source-dirs:      
  Build-depends:
    base      >= 4.6  && < 4.9,
    binary    >= 0.5  && < 0.8,
    directory >= 1.2  && < 1.3,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.7  && < 4.8,
    pandoc    >= 1.14 && < 1.15,
    process   >= 1.1  && < 1.3,
    containers >=0.5 && < 1.0
